I added clickable linksfor the related publication pages, and one link for the center-box author page. However, I didn't extend to all the author pages, because I have one last thing to do: slugify the author pages with the full name. Right now, it only includes the author's last name. It's trickier for the full name. I need to implement more code. I'll do that next.

--- a/mainapp/templates/mainapp/author_list.html
+++ b/mainapp/templates/mainapp/author_list.html
@@ -2,7 +2,8 @@
 {% block content %}
 
 {% for author in authors %}
-	{{ author }}<br>
+	{{ author }}
+	{{ author.id }}<br>
 {% endfor %}
 
 {% endblock content %}
