I added all the ModelViews for forms (Create, Update, Delete) for Author. I also began to do it with Publication. It works, but I'm realizing I will need to implement formsets/inline formsets. Then, I will probably want to use the jQuery library django-dynamic-formset.

--- a/mainapp/templates/mainapp/author_detail.html
+++ b/mainapp/templates/mainapp/author_detail.html
@@ -4,4 +4,10 @@
 
 {{ object }}<br>
 
+{% if user.is_authenticated %}
+	<a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'author-update-page' object.slug object.id %}">Update</a>
+	<a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'author-delete-page' object.slug object.id %}">Delete</a>
+	
+{% endif %}
+
 {% endblock content %}
