--- a/mainapp/templates/mainapp/article_form.html
+++ b/mainapp/templates/mainapp/article_form.html
@@ -7,12 +7,14 @@
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
-				<legend class="border-bottom mb-4">General Information</legend>
+				<legend class="border-bottom mb-4">Article Information</legend>
 				<!--Below is where we use the built-in forms from Django, but it does not include a Submit button -->
 				{{ form|crispy }} <!--Adding this crispy bit nicely formats everything for us-->
 			</fieldset>
 			<div class="form-group">
 				<a class="btn btn-outline-secondary" href="{% url 'publications-page' %}">Cancel</a>
+				<a class="btn btn-outline-info" href="{% url 'journal-new-page' %}">Add Journal</a>
+				<a class="btn btn-outline-warning" href="{% url 'publication_first_step_page' %}">Previous</a>
 				<button class="btn btn-outline-success" type="submit">Next</button>
 			</div>	
 		</form>
