--- a/mainapp/templates/mainapp/book_form.html
+++ b/mainapp/templates/mainapp/book_form.html
@@ -14,7 +14,7 @@
 			<div class="form-group">
 				<a class="btn btn-outline-warning" href="{% url 'publication_first_step_page' %}">Previous</a>
 				<a class="btn btn-outline-secondary" href="{% url 'publications-page' %}">Cancel</a>
-				<button class="btn btn-outline-info" type="submit">Next</button>
+				<button class="btn btn-outline-success" type="submit">Next</button>
 			</div>	
 		</form>
 	</div>
