--- a/mainapp/templates/mainapp/journal_form.html
+++ b/mainapp/templates/mainapp/journal_form.html
@@ -7,13 +7,15 @@
 		<form method="POST">
 			{% csrf_token %}
 			<fieldset class="form-group">
-				<legend class="border-bottom mb-4">General Information</legend>
+				<legend class="border-bottom mb-4">Journal Information</legend>
 				<!--Below is where we use the built-in forms from Django, but it does not include a Submit button -->
-				{{ form|crispy }} <!--Adding this crispy bit nicely formats everything for us-->
+				{{ form|crispy }} <!--Adding this crispy bit nicely formats everything for us
+			-->
+			
 			</fieldset>
 			<div class="form-group">
 				<a class="btn btn-outline-secondary" href="{% url 'publications-page' %}">Cancel</a>
-				<button class="btn btn-outline-success" type="submit">Next</button>
+				<button class="btn btn-outline-success" type="submit">Create</button>
 			</div>	
 		</form>
 	</div>
