First, I fixed the annoying problem with the pages not displaying when no author was associated with a publication. Then, when user clicks Cancel during creation of a PublicationAuthor, it send them to that publication page

--- a/mainapp/templates/mainapp/mainapp-home.html
+++ b/mainapp/templates/mainapp/mainapp-home.html
@@ -454,6 +454,13 @@ THIS IS HOW YOU QUERY ALL THE AUTHORS OF A GIVEN CITED PUBLICATION:<br>
 <!-- Real code -->
 
 {% for publication in publications %}
+
+
+
+<!-- If there is an author -->
+
+{% if publication.publication_authors.first.author.id %}
+
 <article class="media content-section">
 	<div class="media-body">
 
@@ -1080,5 +1087,327 @@ THIS IS HOW YOU QUERY ALL THE AUTHORS OF A GIVEN CITED PUBLICATION:<br>
 		</div>
 	</div>
 </article>
+
+
+
+
+
+
+<!-- If there is no author -->
+{% else %}
+
+
+
+
+
+<article class="media content-section">
+	<div class="media-body">
+
+		<!-- The main grid container starts here -->
+		<div class="grid-container">
+
+			<!-- The top part where the user clicks to get all the citations -->
+			<div class="top-box"> 
+				<div class="logo-top-bottom">{% load static %}
+					<!-- Add media like this:  -->
+					{% load static %}
+					<img src="{% static "../media/site_pics/logos/New-Quotes-Logo-1.png" %}" alt="Logo" height='25' width='50' class="quotes-image">
+				</div>
+			</div>
+
+			<!-- Box top when open -->
+			<div class="top-box-open">
+				<p class="open-header top-center-author">
+					<!-- Cite first author's last name -->
+						No Author
+						({{ publication.year }}) is cited by:
+				</p>
+
+
+				<!-- Creating a flexbox container, which will display all the citations from this publication -->
+				<p class='flex-container'> 
+					<!-- For each citer_pub that cites the cited_pub (i.e. our publication) -->
+		 			{% for citer in publication.cited_pubs.all %}		
+						<span class="top-nested-citations">
+							No Author
+							 <!-- Year of publication -->
+							 ({{ citer.citer_pub.year }});
+						</span>
+						<span id="{{ citer.id }}" class="citation-details">
+							<button class="citation-button button-active">CITATION</button>
+							<button class="context-button">CONTEXT</button><br><br>
+							<img class="top-info-image" src="{% static "../media/site_pics/logos/Info logo.png" %}" alt="Details" height='15' width='15'>
+							<img src="{% static "../media/site_pics/logos/Abstract logo.png" %}" alt="Abstract" height='15' width='15' class="top-abstract-image">	
+							<span class="big-text-box">
+								<span class="actual-citation block-active">
+									{{ citer.actual_citation }}
+								</span>
+								<span class="citation-context">
+									{{ citer.citation_context }}
+								</span>
+							</span>
+						</span><br>
+					{% endfor %}
+				</p>	
+			</div>
+
+				
+
+			<!-- This is the box that opens on the top left to display the citation info when user clicks on image -->
+			<div class="top-left-box-open">
+				{% for citer in publication.cited_pubs.all %}
+					<p id="topLeftAuthor{{ citer.id }}" class="top-left-author open-header">
+						<!-- Publication author and year - same procedure as in the main box regarding author count-->
+						Details for No Author
+						 <!-- Year of publication -->
+						 ({{ citer.citer_pub.year }})
+					</p>
+					<div id="topLeftInfo{{ citer.id }}" class="top-left-info">
+						<!-- Title -->
+						<span class="left-categories">TITLE</span> 
+						<span class="left-entries"><a href="{% url 'publication-detail-page' citer.citer_pub.slug citer.citer_pub.id %}">{{ citer.citer_pub.title }}</a></span>
+						<br>
+
+						<!-- Authors -->
+						<span class="left-categories">NO AUTHORS</span> 
+						
+						<br>
+						<span class="left-categories">YEAR</span> 
+						<span class="left-entries">{{ citer.citer_pub.year }}</span>
+						<br>
+						<!-- Below is the code to display the human readable name of the pub_type, rather than the code associated with it. -->
+						<span class="left-categories">TYPE</span> 
+						<span class="left-entries">{{ citer.citer_pub.get_pub_type_display }}
+						{% if citer.citer_pub.pub_type == 'A'%}</span>
+							<br>
+							<span class="left-categories">JOURNAL</span> 
+							<span class="left-entries">{{ citer.citer_pub.journal.journal_name }}</span>
+							<br>
+							<span class="left-categories">VOLUME</span> 
+							<span class="left-entries">{{ citer.citer_pub.journal.volume }}</span>
+							<br>
+							<span class="left-categories">ISSUE</span> 
+							<span class="left-entries">{{ citer.citer_pub.journal.issue }}</span>
+							<br><small>More</small>
+						{% endif %}
+					</div>
+				{% endfor %}
+			</div>
+
+			<!-- This is the box that opens on the top right to display the citation abstract when user clicks on image -->
+			<div class="top-right-box-open">
+				{% for citer in publication.cited_pubs.all %}
+					<p id="topRightAuthor{{ citer.id }}" class="top-right-author open-header">
+						<!-- Publication author and year - same procedure as in the main box regarding author count-->
+						Abstract for No Author
+						 <!-- Year of publication -->
+						 ({{ citer.citer_pub.year }})
+					</p>
+					<div id="topRightAbstract{{ citer.id }}" class="top-right-abstract">
+						<span class="abstract-category">
+						ABSTRACT</span>
+						<span class="abstract-entry">
+						{{ citer.citer_pub.abstract }}</span>
+					</div>
+				{% endfor %}
+			</div>
+
+
+			<!-- The cnter box, where the main info of the citation appears -->	
+			<div class="center-box">
+				<div class="author-year-title">
+				 
+					 No Author
+
+					 <!-- Publication year -->
+					 <span class="year"> ({{ publication.year }})
+					 </span>
+					 <!-- For Articles, put article title inside quotes and follow with journal name in italics -->
+					 {% if  publication.pub_type == 'A' %}
+					  <div class="publication-title"><a href="{% url 'publication-detail-page' publication.slug publication.id %}"> 
+					 "{{ publication.title }}"</a> </div> <div class="journalname"><em><a href="#">{{ publication.journal }}</a></em></div>
+					 <!-- For Books, put book title in italics -->
+					 {% elif publication.pub_type == 'B' %}
+					  <div class="publication-title"><a href="{% url 'publication-detail-page' publication.slug publication.id %}">
+					  	<em>{{ publication.title }}</em></a></div>
+					  <!-- For other Publication types, don't do anything special -->
+					 {% else %}
+					  <div class="publication-title"><a href="{% url 'publication-detail-page' publication.slug publication.id %}"> {{ publication.title }}</a></div>
+					 {% endif %}
+				</div>
+			</div>
+			
+			<!-- The left box when open, where all the details of the publciation appear -->
+			<div class="left-box-open">
+				<p class="open-header center-left-author">
+				Details for No Author
+						({{ publication.year }})</p>
+					<div class="center-left-info">
+						<span class="left-categories">TITLE</span> 
+						<span class="left-entries"><a href="{% url 'publication-detail-page' publication.slug publication.id %}">{{ publication.title }}</a></span>
+						<br>
+						<!-- Authors -->
+						<span class="left-categories">NO AUTHORS</span> 
+					
+						<br>
+						<span class="left-categories">YEAR</span> 
+						<span class="left-entries">{{ publication.year }}</span>
+						<br>
+						<!-- Below is the code to display the human readable name of the pub_type, rather than the code associated with it. -->
+						<span class="left-categories">TYPE</span> 
+						<span class="left-entries">{{ publication.get_pub_type_display }}</span>
+
+						{% if publication.pub_type == 'A' %}
+							<br>
+							<span class="left-categories">JOURNAL</span> 
+							<span class="left-entries">{{ publication.journal.journal_name }}</span>
+							<br>
+							<span class="left-categories">VOLUME</span> 
+							<span class="left-entries">{{ publication.journal.volume }}</span>
+							<br>
+							<span class="left-categories">ISSUE</span> 
+							<span class="left-entries">{{ publication.journal.issue }}</span>
+							<br><small>More</small>
+						{% endif %}
+					</div>
+			</div>
+
+			<!-- The left part where the user clicks to get all the publication details -->
+			<div class="left-box">
+				{% load static %}
+				<img class="center-info-image" src="{% static "../media/site_pics/logos/Info logo.png" %}" alt="Details" height='20' width='20'>
+			</div>
+
+			<!-- The right part where the user clicks to get the Abstract -->
+			<div class="right-box">
+				<img src="{% static "../media/site_pics/logos/Abstract logo.png" %}" alt="Abstract" height=20 width='20'>
+			</div>
+
+			<!-- The right box when open, where the Abstract appears -->
+			<article class="right-box-open">
+				<!-- Creating a flexbox container, which will display all the citations from this publication -->
+				<header class="open-header center-right-author">Abstract for No Author
+						({{ publication.year }})</header>
+				<div class="center-right-abstract">
+					<span class="abstract-category">
+						ABSTRACT</span>
+					<span class="abstract-entry">
+						{{ publication.abstract }}</span>
+				</div>
+			</article>
+
+
+			<!-- The bottom part where the user clicks to get the citations -->
+			<div class="bottom-box">
+				<div class="logo-top-bottom">{% load static %}
+					<img src="{% static "../media/site_pics/logos/New-Quotes-Logo-2.png" %}" alt="Logo" height='25' width='50' class="quotes-image">
+				</div>
+			</div>
+
+			<!-- The top part where the user clicks to get all the citations -->
+			<div class="bottom-box-open">
+				<p class="open-header bottom-center-author">
+					No Author
+						({{ publication.year }}) cites:
+				</p>
+				<!-- Creating a flexbox container, which will display all the citations from this publication -->
+				<p class='flex-container'>
+					<!-- For each cited_pub cited by the citer_pub (i.e. our publication) -->
+		 			{% for cited in publication.citer_pubs.all %}		
+						<span class="bottom-nested-citations">
+						No Author
+						 <!-- Year of publication -->
+						 ({{ cited.cited_pub.year }}); 
+						</span>
+						<span id="{{ cited.id }}" class="citation-details">
+							<button class="citation-button button-active">CITATION</button>
+							<button class="context-button">CONTEXT</button><br><br>
+							<img class="bottom-info-image" src="{% static "../media/site_pics/logos/Info logo.png" %}" alt="Details" height='15' width='15'>
+
+							<img src="{% static "../media/site_pics/logos/Abstract logo.png" %}" alt="Abstract" height='15' width='15' class="bottom-abstract-image">
+							<span class="big-text-box">
+								<span class="actual-citation block-active">
+									{{ cited.actual_citation }}
+								</span>
+								<span class="citation-context">
+									{{ cited.citation_context }}
+								</span>
+
+							</span>
+						</span><br>
+					{% endfor %}
+				</p>
+			</div>
+				
+
+			<!-- This is the box that opens on the bottom left to display the citation info when user clicks on image -->
+			<div class="bottom-left-box-open">
+				{% for cited in publication.citer_pubs.all %}
+					<p id="bottomLeftAuthor{{ cited.id }}" class="bottom-left-author open-header">
+						<!-- Publication author and year - same procedure as in the main box regarding author count-->
+						Details for No Author
+						 <!-- Year of publication -->
+						 ({{ cited.cited_pub.year }})
+					</p>
+					<div id="bottomLeftInfo{{ cited.id }}" class="bottom-left-info">
+						<span class="left-categories">TITLE</span> 
+						<span class="left-entries"><a href="{% url 'publication-detail-page' cited.cited_pub.slug cited.cited_pub.id %}">{{ cited.cited_pub.title }}</a></span>
+						<br>
+						<span class="left-categories">NO AUTHORS</span> 
+
+						<br>
+						<span class="left-categories">YEAR</span> 
+						<span class="left-entries">{{ cited.cited_pub.year }}</span>
+						<br>
+						<!-- Below is the code to display the human readable name of the pub_type, rather than the code associated with it. -->
+						<span class="left-categories">TYPE</span> 
+						<span class="left-entries">{{ cited.cited_pub.get_pub_type_display }}</span>
+						{% if cited.cited_pub.pub_type == 'A'%}
+							<br>
+							<span class="left-categories">JOURNAL</span> 
+							<span class="left-entries">{{ cited.cited_pub.journal.journal_name }}</span>
+							<br>
+							<span class="left-categories">VOLUME</span> 
+							<span class="left-entries">{{ cited.cited_pub.journal.volume }}</span>
+							<br>
+							<span class="left-categories">ISSUE</span> 
+							<span class="left-entries">{{ cited.cited_pub.journal.issue }}</span>
+							<br><small>More</small>
+						{% endif %}
+					</div>
+				{% endfor %}
+			</div>
+
+
+			<!-- This is the box that opens on the bottom right to display the citation abstract when user clicks on image -->
+			<div class="bottom-right-box-open">
+				{% for cited in publication.citer_pubs.all %}
+					<p id="bottomRightAuthor{{ cited.id }}" class="bottom-right-author open-header">
+						<!-- Publication author and year - same procedure as in the main box regarding author count-->
+						Abstract for No Author
+						 <!-- Year of publication -->
+						 ({{ cited.cited_pub.year }})
+					</p>
+					<div id="bottomRightAbstract{{ cited.id }}" class="bottom-right-abstract">
+						<span class="abstract-category">
+						ABSTRACT</span>
+						<span class="abstract-entry">
+						{{ cited.cited_pub.abstract }}</span>
+					</div>
+				{% endfor %}
+			</div>
+		</div>
+	</div>
+</article>
+
+
+
+
+
+
+
+
+
+{% endif %}
 {% endfor %} 
 {% endblock content %}
